--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -63,8 +63,7 @@ header .nav-wrapper {
   background-color: var(--background-brand);
   width: 100%;
   z-index: 2;
-  position: fixed;
-  box-shadow: var(--shadow);
+  position: relative;
 }
 
 header nav {
@@ -74,11 +73,11 @@ header nav {
     'hamburger brand tools' var(--nav-height)
     'sections sections sections' 1fr / auto 1fr auto;
   align-items: center;
-  gap: 0 var(--space-m);
+  gap: 0 var(--space-l);
   margin: auto;
   max-width: 1248px;
   height: var(--nav-height);
-  padding: 0 var(--space-m);
+  padding: 0 var(--space-l);
   font-family: var(--body-font-family);
   color: white;
 }
@@ -97,7 +96,7 @@ header nav[aria-expanded='true'] {
     position: relative;
   }
 
-  header nav {
+  header nav,
     display: flex;
     justify-content: space-between;
     gap: 0 32px;
